--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "hamburger-react": "^2.5.2",
     "lenis": "^1.3.15",
     "lucide-react": "^0.553.0",
     "mathjs": "^15.1.0",
