--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-sanity": "^11.6.10",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "resend": "^6.5.2",
     "sanity": "^4.19.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0"
   },
